fix: syntax+add flex-wrap to row

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-    /* border: 1px solid black; */
 }
 /* #endregion ---- Reset ---- */
 
@@ -21,14 +20,16 @@ img{
     justify-content: space-between;
     padding-top: 60px;
     width: 1380px;
+    flex-wrap: wrap;
 }
 .col{
     width: 450px;
 }
-nav a , footer a{
+nav a , footer a , a i{
     margin-right: 10px;
     text-decoration: none;
     font-weight: 700;
+    color: white;
 }
 .header-container , .footer-container{
     display: flex;
@@ -65,9 +66,6 @@ h5{
     background-color: #ff6900;
     min-height: 70px;
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-}
-a{
-    color: white;
 }
 .link a{
     margin-left: 5px;
